--- a/internal/views/admin/coupons_stats.html
+++ b/internal/views/admin/coupons_stats.html
@@ -7,6 +7,7 @@
   <a href="/admin/sales">Ventas</a> | 
   <a href="/admin/destacada">Destacada</a> | 
   <a href="/admin/costs">Calculadora</a> | 
+  <a href="/admin/categorias">Categorías</a> | 
   <a href="/admin/cupones" class="active">Cupones</a> | 
   <a href="/admin/logout">Salir</a>
 </nav>
