--- a/internal/views/layout.html
+++ b/internal/views/layout.html
@@ -16,7 +16,7 @@
 <link rel="icon" type="image/svg+xml" href="/public/assets/img/favicon.svg" />
 <link rel="icon" type="image/png" href="/public/assets/img/chroma-logo.png" />
 <link rel="apple-touch-icon" href="/public/assets/img/chroma-logo.png" />
-<link rel="stylesheet" href="/public/assets/styles.css?v=dark7" />
+<link rel="stylesheet" href="/public/assets/styles.css?v={{.AssetVersion}}" />
 <link rel="preload" as="image" href="/public/assets/img/img1.webp">
 <!-- Manifest diferido para no bloquear LCP -->
 <link rel="manifest" href="/public/manifest.json" media="none" onload="this.media='all'">
@@ -35,7 +35,7 @@
 <meta name="twitter:image" content="{{.OGImage}}">
 {{with .SchemaJSON}}<script type="application/ld+json">{{.}}</script>{{end}}
 <!-- JS unificado de UI - deferido para no bloquear render -->
-<script type="module" src="/public/assets/app.js?v=9" defer></script>
+<script type="module" src="/public/assets/app.js?v={{.AssetVersion}}" defer></script>
 </head>
 <body class="site">
 <header class="topbar">
